[gd_scene load_steps=7 format=3 uid="uid://bbi3fcfafn7y2"]

[ext_resource type="Script" path="res://Assets/Models/card.gd" id="1_50iv2"]
[ext_resource type="Texture2D" uid="uid://croabbfqga8i0" path="res://Assets/CardAssets/Other/NameBackground.png" id="3_m6v2g"]
[ext_resource type="Texture2D" uid="uid://deu2r0b280et7" path="res://Assets/CardAssets/Other/AttackBackground.png" id="4_tic4m"]
[ext_resource type="Texture2D" uid="uid://du40f6n0ap3gg" path="res://Assets/CardAssets/Other/CostBackground.png" id="5_hjwh3"]
[ext_resource type="Texture2D" uid="uid://6lr5iavx650g" path="res://Assets/CardAssets/Other/HealthBackground.png" id="6_bdrre"]

[sub_resource type="LabelSettings" id="LabelSettings_16nlq"]

[node name="CardBase" type="HBoxContainer"]
custom_minimum_size = Vector2(300, 450)
offset_right = 300.0
offset_bottom = 450.0
pivot_offset = Vector2(150, 225)
size_flags_horizontal = 3
script = ExtResource("1_50iv2")

[node name="Image" type="TextureRect" parent="."]
custom_minimum_size = Vector2(280, 100)
layout_mode = 2
size_flags_horizontal = 3
expand_mode = 1

[node name="Border" type="TextureRect" parent="Image"]
custom_minimum_size = Vector2(280, 100)
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
expand_mode = 1
metadata/_edit_use_anchors_ = true

[node name="AttackRect" type="NinePatchRect" parent="Image/Border"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.2875
anchor_top = 0.800915
anchor_right = 0.4125
anchor_bottom = 0.885584
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_tic4m")
metadata/_edit_use_anchors_ = true

[node name="AttackLabel" type="Label" parent="Image/Border/AttackRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -5.0
offset_top = -11.5
offset_right = 5.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "5"
label_settings = SubResource("LabelSettings_16nlq")
horizontal_alignment = 1

[node name="CostRect" type="NinePatchRect" parent="Image/Border"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.4375
anchor_top = 0.800915
anchor_right = 0.5625
anchor_bottom = 0.885584
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_hjwh3")
metadata/_edit_use_anchors_ = true

[node name="CostLabel" type="Label" parent="Image/Border/CostRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -5.0
offset_top = -11.5
offset_right = 5.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "2"
horizontal_alignment = 1

[node name="HealthRect" type="NinePatchRect" parent="Image/Border"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5875
anchor_top = 0.800915
anchor_right = 0.7125
anchor_bottom = 0.885584
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("6_bdrre")
metadata/_edit_use_anchors_ = true

[node name="HealthLabel" type="Label" parent="Image/Border/HealthRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -5.0
offset_top = -11.5
offset_right = 5.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "6"
horizontal_alignment = 1

[node name="NameRect" type="NinePatchRect" parent="Image/Border"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.142857
anchor_top = 0.686499
anchor_right = 0.857143
anchor_bottom = 0.755149
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_m6v2g")
metadata/_edit_use_anchors_ = true

[node name="NameLabel" type="Label" parent="Image/Border/NameRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -49.0
offset_top = -11.5
offset_right = 49.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Nazwa Karty"
horizontal_alignment = 1

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
